<resources>
    <string name="app_name">RetrofitLesson</string>
    <string name="button">SIGN IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lastname">LastName</string>
    <string name="firstname">FirstName</string>
    <string name="kminchelle">kminchelle</string>
    <string name="_0lelplr">0lelplR</string>
</resources>